tests/error/error04.jan
// error04: LHS variable used on RHS

x -> y;

y += x;
x -= x

